# ict-trading-bot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: settings.example.toml
scripts/: annual_returns.py  backtest_lower_tf.py  backtest_m5m15_extended.py  backtest_parallel.py  backtest_robust.py  compare_configs.py  dashboard.py  download_data.py  download_ib_data.py  filter_isolation.py  ict_concepts_backtest.py  run_adaptive_strategy.py  run_backtest.py  run_comparison.py  run_full_comparison.py  run_live.py  run_live_firsth1.py  run_m5_backtest.py  run_max_portfolio.py  v3_deep_analysis.py  walk_forward_lower_tf.py
src/ict_bot/backtest/: __init__.py  engine.py  metrics.py  walk_forward.py
src/ict_bot/data/: __init__.py  downloader.py  loader.py
src/ict_bot/risk/: __init__.py  manager.py
src/ict_bot/signals/: __init__.py  detector.py  kill_zones.py  trend_adaptive.py
src/ict_bot/trading/: __init__.py  broker.py  config.py  live_loop.py  news_filter.py  position_manager.py
tests/: test_adaptive_strategy.py  test_liquidity_targets.py  test_risk_manager.py  test_trading.py
